profileとadviserの無効化/修正

--- a/common.css
+++ b/common.css
@@ -14,15 +14,12 @@ body {
   font-family: "游明朝", "Yu Mincho", YuMincho, "Hiragino Mincho Pro", serif;
   /* color変数 */
 }
-
 body a {
   text-decoration: none;
 }
-
 body a:hover {
   opacity: 0.8;
 }
-
 body img {
   max-width: 100%;
   vertical-align: bottom;
@@ -48,18 +45,14 @@ body img {
 
 /* カラム */
 .bl_cardUnit {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   width: 100%;
 }
 
 .bl_cardUnit__col2 > .bl_card {
   width: 40%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin-right: 2.5%;
 }
 
@@ -69,10 +62,7 @@ body img {
 
 /* ヘルパークラス */
 .hp_reverse {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .hp_br-pc {
@@ -318,51 +308,35 @@ body img {
 }
 
 .hp_flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .hp_column {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .hp_jcc {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .hp_jcsb {
-  -webkit-box-pack: justify !important;
-      -ms-flex-pack: justify !important;
-          justify-content: space-between !important;
+  justify-content: space-between !important;
 }
 
 .hp_jcsa {
-  -ms-flex-pack: distribute !important;
-      justify-content: space-around !important;
+  justify-content: space-around !important;
 }
 
 .hp_jcfe {
-  -webkit-box-pack: end !important;
-      -ms-flex-pack: end !important;
-          justify-content: flex-end !important;
+  justify-content: flex-end !important;
 }
 
 .hp_aic {
-  -webkit-box-align: center !important;
-      -ms-flex-align: center !important;
-          align-items: center !important;
+  align-items: center !important;
 }
 
 .hp_aife {
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
 }
 
 .hp_clearfix::after {
@@ -416,5 +390,4 @@ body img {
 .font {
   font-family: "游明朝", "Yu Mincho";
   display: inline;
-}
-/*# sourceMappingURL=common.css.map */
+}/*# sourceMappingURL=common.css.map */
